feat: add purchases API
